--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
     <title>WebFlow</title>
 </head>
 <body>
-    <header>
+    <header class="page-container">
+        <section class="navbar">
         <nav>
             <ul>
                 <li class="nav-logo primary-color"><a href="">LOGO</a></li>
                 <li ><a href=""><button class="btn-1">Sign Up</button></a></li>
             </ul>
         </nav>
+        </section>
+
+        <section class="first-banner">
+            <h4>Cool Dark UI Template for <br> Webflow Agencies!</h4>
+            <button>Stay Focused</button>
+        </section>
+        
+
     </header>
 
     <main>
