--- a/index.html
+++ b/index.html
@@ -30,8 +30,38 @@
 
     </header>
 
-    <main>
+    <main style="margin-top: 700px;">
+        <section  class="action-container">
+            <div class="field-1">
+                <h2>See It in Action</h2>
+                <p>Explore the live preview and imagine your brand in this bold new look.</p>
+                <button class="launch-btn">Launch Live Preview</button>
+            </div>
 
+            <div class="field-2">
+                <img id="wc-img" src="./Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+
+        <section class="user-container">
+            <div class="text-section-1">
+                <h1>Joined Thousands of Productive Users</h1>
+            </div>
+            <div class="text-section-2">
+                <div class="sub-text">
+                    <h1>50K</h1>
+                    <p>Active Users</p>
+                </div>
+                <div class="sub-text">
+                    <h1>2M+</h1>
+                    <p>Focus Sessions</p>
+                </div>
+                <div class="sub-text">
+                    <h1>95%</h1>
+                    <p>Satisfaction Rate</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
