completed the lets connect section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- two sections will be added here later -->
+
+         <section class="get-in-touch">
+            <div class="text-field">
+                <h1>Let's Get in Touch</h1>
+            </div>
+            <div class="form-field">
+                <form action="">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="example@email.com">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="full name">
+                    <label for="textarea">Message</label>
+                    <textarea name="textarea" id="textarea" placeholder="write your message...."></textarea>
+                    <button>Get in Touch</button>
+                </form>
+            </div>
+         </section>
     </main>
 
     <footer>
