--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
          </section>
     </main>
 
-    <footer>
-
+    <footer class="mother-container">
+        
     </footer>
 </body>
 </html>
