--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
     </main>
 
     <footer class="mother-container">
+        <div class="bottom-text">
+            <h1>LOGO</h1>
+            <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        </div>
+        <div class="bottom-nav">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">How it Works</a>
+            <a href="">Services</a>
+        </div>
         
     </footer>
 </body>
