finally finished the user feedback section. Too many divs Huh!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="navbar">
         <nav>
             <ul>
-                <li class="nav-logo primary-color"><a href="">LOGO</a></li>
+                <li class="nav-logo primary-color"><a href="">BAWOOL</a></li>
                 <li ><a href=""><button class="btn-1">Sign Up</button></a></li>
             </ul>
         </nav>
@@ -64,6 +64,86 @@
         </section>
 
         <!-- two sections will be added here later -->
+         <section class="user-feedback">
+            <div class="text-part">
+                <h1 style="text-align: center;">What our users say</h1>
+            </div>
+
+        <div style="display: flex; gap: 20px;" class="card-parent">
+            <div class="card-part">
+                <div class="stars">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <h1>Loved by Designers</h1>
+                    <p>They are very good at designing. their design is top notch - NoCap</p>
+
+                    <div style="display: flex; gap: 10px;" class="profile">
+                        <div class="sub-profile">
+                            <img style="border-radius: 50%;" src="./Assets/avatar.png" alt="">
+                        </div>
+                        <div class="sub-profile">
+                            <h4 style="margin-bottom: 0px; margin-top: 5px;">Sahara Al Naser</h4>
+                            <p style="margin-top: 0px;">29th April 2025</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="card-part">
+                <div class="stars">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <!-- <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt=""> -->
+                    <h1>Loved by Designers</h1>
+                    <p>This Template had me coding for last 7hrs straight. Anyways.</p>
+
+                    <div style="display: flex; gap: 10px;" class="profile">
+                        <div class="sub-profile">
+                            <img style="border-radius: 50%;" src="./Assets/avatar.png" alt="">
+                        </div>
+                        <div class="sub-profile">
+                            <h4 style="margin-bottom: 0px; margin-top: 5px;">Meherul Hasan</h4>
+                            <p style="margin-top: 0px;">15th November 2022</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="card-part">
+                <div class="stars">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <h1>Loved by Designers</h1>
+                    <p>I'm Farhan Labib and I support LGBTQ++. Hehehe!</p>
+
+                    <div style="display: flex; gap: 10px;" class="profile">
+                        <div class="sub-profile">
+                            <img style="border-radius: 50%;" src="./Assets/avatar.png" alt="">
+                        </div>
+                        <div class="sub-profile">
+                            <h4 style="margin-bottom: 0px; margin-top: 5px;">Farhan Labib</h4>
+                            <p style="margin-top: 0px;">9th November 2023</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+         </section>
 
          <section class="get-in-touch">
             <div class="text-field">
@@ -85,7 +165,7 @@
 
     <footer class="mother-container">
         <div class="bottom-text">
-            <h1>LOGO</h1>
+            <h1>BAWOOL</h1>
             <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
         </div>
         <div class="bottom-nav">
