added the optional section. the website is now complete,  Alhamdulillah.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <img src="./Assets/icon-star.png" alt="">
                     <img src="./Assets/icon-star.png" alt="">
                     <img src="./Assets/icon-star.png" alt="">
-                    <h1>Loved by Designers</h1>
+                    <h1>Interesting Design Options</h1>
                     <p>They are very good at designing. their design is top notch - NoCap</p>
 
                     <div style="display: flex; gap: 10px;" class="profile">
@@ -98,10 +98,10 @@
                 <div class="stars">
                     <img src="./Assets/icon-star.png" alt="">
                     <img src="./Assets/icon-star.png" alt="">
-                    <!-- <img src="./Assets/icon-star.png" alt="">
                     <img src="./Assets/icon-star.png" alt="">
-                    <img src="./Assets/icon-star.png" alt=""> -->
-                    <h1>Loved by Designers</h1>
+                    <img src="./Assets/icon-star.png" alt="">
+                    <!-- <img src="./Assets/icon-star.png" alt=""> -->
+                    <h1>Designs taught me things</h1>
                     <p>This Template had me coding for last 7hrs straight. Anyways.</p>
 
                     <div style="display: flex; gap: 10px;" class="profile">
@@ -125,7 +125,7 @@
                     <img src="./Assets/icon-star.png" alt="">
                     <img src="./Assets/icon-star.png" alt="">
                     <img src="./Assets/icon-star.png" alt="">
-                    <h1>Loved by Designers</h1>
+                    <h1>Templates had Rainbow</h1>
                     <p>I'm Farhan Labib and I support LGBTQ++. Hehehe!</p>
 
                     <div style="display: flex; gap: 10px;" class="profile">
@@ -143,6 +143,15 @@
             </div>
         </div>
 
+         </section>
+
+         <section class="ready-focus">
+            <div class="single-div-challenge">
+                <h1>Ready to focus better</h1>
+                <p>This template instantly leveled up our presence.” - Studio Vertex</p>
+                <button>Ger Started Free</button><br>
+                <img src="./Assets/wc-big.png" alt="">
+            </div>
          </section>
 
          <section class="get-in-touch">
