--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="single-div-challenge">
                 <h1>Ready to focus better</h1>
                 <p>This template instantly leveled up our presence.” - Studio Vertex</p>
-                <button>Ger Started Free</button><br>
+                <button>Get Started Free</button><br>
                 <img src="./Assets/wc-big.png" alt="">
             </div>
          </section>
